fix bug for image stretch in safari

--- a/CSS/website.css
+++ b/CSS/website.css
@@ -107,6 +107,7 @@ main{
 
 .container {
   display: flex;
+  align-items: flex-start; 
   justify-content: space-around;
 
 }
